[gd_scene load_steps=3 format=2]

[ext_resource path="res://nitido.gd" type="Script" id=1]
[ext_resource path="res://a.png" type="Texture" id=2]

[node name="colaNitida" type="Node2D"]

[node name="nitido" type="TextureRect" parent="."]
margin_left = 45.0
margin_top = 27.0
margin_right = 138.0
margin_bottom = 117.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 1 )

[node name="timer" type="Timer" parent="nitido"]
autostart = true

[node name="timer2" type="Timer" parent="nitido"]
wait_time = 2.0

[connection signal="timeout" from="nitido/timer" to="nitido" method="_on_timer_timeout"]
[connection signal="timeout" from="nitido/timer2" to="nitido" method="_on_timer2_timeout"]
